--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -1,33 +1,22 @@
-.footer-page {
-  background: #000;
-  position: relative;
-  height: 110px;
-  width: 100%;
-  bottom: 0;
+footer {
+  background-color: #1b1822;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  margin-top: auto;
+  padding: 8px;
 
-  .text-zone {
-    height: auto;
-    display: flex;
-    flex-wrap: wrap;
-    position: relative;
-    top: 30%;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 5rem;
-
-    p {
-      align-items: flex-start;
-      font-size: 2rem;
-      font-weight: 400;
-      font-family: 'Coolvetica';
-    }
-    .link-container {
+  .footer-link-container {
+    
+    .footer-link {
       font-size: 2rem;
       align-items: flex-end;
+      color: #fff;
+      padding: 0 1rem;
 
-      .footer-link {
-        color: #fff;
-        padding: 0 3rem;
+      &:hover {
+        color: aqua;
       }
     }
   }
