--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -11,13 +11,23 @@ $color-outline: #7f7f7f80;
 
 .about-page {
   flex-direction: row-reverse;
+
+  @media screen and (max-width: 768px) {
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+  }
   
   .text-zone {
     position: relative;
     text-align: right;
-    padding: 0 80px;
-    width: 50%;
+    padding: 35px 10px;
+    width: 90%;
     max-height: 90%;
+
+    @media screen and (max-width: 768px) {
+      text-align: center;
+    }
 
     .school-emb-container {
       width: 80px;
@@ -41,13 +51,7 @@ $color-outline: #7f7f7f80;
       flex-direction: row;
 
       .section {
-        // background: #ffffff66;
-        // padding: 0em 2em 0em 0em;
         margin: auto;
-        // border-radius: 4em;
-        // display: flex;
-        // flex-wrap: wrap;
-        // width: 100%;
 
         h3 {
           font-size: 16px;
@@ -104,6 +108,10 @@ $color-outline: #7f7f7f80;
     width: 100%;
     max-height: 90%;
 
+    @media screen and (max-width: 768px) {
+      display: none;
+    }
+
     h1 {
       font-size: 53px;
       cursor: pointer;
@@ -123,6 +131,11 @@ $color-outline: #7f7f7f80;
     text-align: center;
     z-index: 99;
     @include flex;
+
+    @media screen and (max-width: 768px) {
+      margin: 0px;
+    }
+
 
     .header {
       position: relative;
