--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -70,12 +70,13 @@
 
   .text-zone {
     position: relative;
-    padding: 0 80px;
-    width: 50%;
+    text-align: right;
+    padding: 35px 10px;
+    width: 90%;
     max-height: 90%;
 
-    @media screen and (max-width: 800px) {
-      padding: 0 30px;
+    @media screen and (max-width: 768px) {
+      text-align: center;
     }
 
     h1 {
