layout changes, about page details changed

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -9,20 +9,25 @@ $color-outline: #7f7f7f80;
   @content;
 }
 
+.highlight {
+  color: #3cefff;
+}
+
 .about-page {
-  flex-direction: row-reverse;
+  height: fit-content;
+  background: #272b3a;
 
   @media screen and (max-width: 768px) {
     flex-direction: column-reverse;
     align-items: center;
     justify-content: center;
   }
-  
+
   .text-zone {
     position: relative;
     text-align: right;
-    padding: 35px 80px;
-    width: 50%;
+    padding: 0 10px;
+    width: 90%;
     max-height: 90%;
 
     @media screen and (max-width: 768px) {
@@ -30,6 +35,116 @@ $color-outline: #7f7f7f80;
       width: 90%;
       max-height: 90%;
       text-align: center;
+    }
+
+    .box {
+      display: flex;
+      width: 30%;
+      left: 0;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+
+      h2 {
+        font-size: 2.5rem;
+      }
+
+      .profile-img {
+        width: 300px;
+        margin-bottom: 24px;
+        border-radius: 50%;
+        background: #3cefff;
+      }
+
+      @media screen and (max-width: 800px) {
+        width: 50%;
+        position: relative;
+        left: 25%;
+      }
+    }
+
+    .overview-bio {
+      display: flex;
+      position: absolute;
+      color: #fff;
+      width: 40%;
+      left: 32%;
+      top: 10%;
+      z-index: 9999;
+      font-size: 1.9rem;
+
+      .message {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+      }
+
+      h3.overview-subheaders {
+        font-size: 2.4rem;
+        color: #3cefff;
+        margin-bottom: 0px;
+        margin-top: 0px;
+        margin-right: 0px;
+        text-align: left;
+        font-weight: 400;
+        margin-left: 4rem;
+        text-decoration: wavy;
+      }
+
+      @media screen and (max-width: 800px) {
+        flex-direction: column;
+        padding: 2rem 3rem;
+        position: relative;
+        width: 90%;
+        left: 0%;
+
+        .message {
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+        }
+      }
+    }
+
+    .goals {
+      flex-direction: column;
+      width: 90%;
+
+      p {
+        font-weight: 100;
+        text-align: center;
+      }
+
+      .message {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+      }
+
+      h3.overview-subheaders {
+        font-size: 2.4rem;
+        color: #3cefff;
+        margin-bottom: 0px;
+        margin-top: 0px;
+        margin-right: 0px;
+        text-align: left;
+        font-weight: 400;
+        margin-left: 4rem;
+        text-decoration: wavy;
+      }
+
+      @media screen and (max-width: 800px) {
+        flex-direction: column;
+        position: relative;
+        width: 90%;
+        left: 0%;
+
+        .goals {
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+        }
+      }
     }
 
     .school-emb-container {
@@ -59,7 +174,7 @@ $color-outline: #7f7f7f80;
         h3 {
           font-size: 16px;
           cursor: pointer;
-          font-family: 'Coolvetica';
+          font-family: "Coolvetica";
           color: #fff;
           flex-grow: 2;
           font-weight: 400;
@@ -118,7 +233,7 @@ $color-outline: #7f7f7f80;
     h1 {
       font-size: 53px;
       cursor: pointer;
-      font-family: 'Coolvetica';
+      font-family: "Coolvetica";
       color: #5f4333;
       font-weight: 400;
       margin-top: 0;
@@ -129,16 +244,19 @@ $color-outline: #7f7f7f80;
 
   .cube-container {
     perspective: 1000px;
-    position: relative;
     margin: auto;
+    position: absolute;
+    margin: auto;
+    left: 80%;
+    top: 150px;
     text-align: center;
     z-index: 99;
     @include flex;
 
     @media screen and (max-width: 768px) {
+      position: inherit;
       margin: 0px;
     }
-
 
     .header {
       position: relative;
@@ -173,7 +291,7 @@ $color-outline: #7f7f7f80;
         border: 1px solid $color-outline;
         text-transform: uppercase;
         letter-spacing: 0.08em;
-        font-family: 'Roboto', sans-serif;
+        font-family: "Roboto", sans-serif;
         font-size: 80px;
         font-weight: 500;
         @include flex;
