--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -1,26 +1,44 @@
 .contact-page {
   background: #34355a;
+  align-items: center;
+
+  @media screen and (max-width: 800px) {
+    flex-direction: column;
+  }
 
   h1 {
-    display: flex;
     font-size: 3rem;
     width: 100%;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 0 5rem;
+    text-align: center;
   }
 
   .text-zone {
-    width: 50%;
+    width: 35%;
+    display: flex;
+    flex-wrap: wrap;
     position: relative;
-    text-align: left; 
-    padding: 35px 10px;
-    max-height: 90%;
+    text-align: left;
+
+    p {
+      padding: 0 5rem;
+    }
+
+    @media screen and (max-width: 800px) {
+      width: 90%;
+      text-align: center;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+
+  form {
+    width: 100%;
   }
 
   .contact-form {
     width: 40%;
-    padding: 0 4rem;
+    display: flex;
+    padding: 4rem 1rem 0rem 1rem;
     flex-grow: 8;
     min-width: 20px;
 
@@ -53,8 +71,8 @@
       }
     }
 
-    input[type='text'],
-    input[type='email'] {
+    input[type="text"],
+    input[type="email"] {
       width: 100%;
       border: 0;
       border-radius: 6px;
@@ -96,6 +114,10 @@
         background-color: #1f2f30;
         transition-duration: 1.1s;
       }
+    }
+
+    @media screen and (max-width: 800px) {
+      width: 90%;
     }
   }
 
