--- a/src/App.scss
+++ b/src/App.scss
@@ -23,12 +23,12 @@ textarea {
 
 .loader-active {
   display: block;
-  position: relative;
+  position: absolute;
   left: 0;
   right: 0;
   margin: auto;
   top: 0;
-  bottom: 0;
+  bottom: 400px;
   width: 100px;
   height: 100px;
   animation: fadeOut 1s 1s;
