--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -1,6 +1,8 @@
 .contact-page {
   background: #34355a;
   align-items: center;
+  justify-content: center;
+  padding: 1rem 0rem;
 
   @media screen and (max-width: 800px) {
     flex-direction: column;
@@ -25,6 +27,7 @@
 
     @media screen and (max-width: 800px) {
       width: 90%;
+      padding: 0px;
       text-align: center;
       align-items: center;
       justify-content: center;
@@ -118,6 +121,7 @@
 
     @media screen and (max-width: 800px) {
       width: 90%;
+      padding: 0px;
     }
   }
 
