--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -30,6 +30,14 @@
   }
 }
 
+.slidepop-up {
+  transition: all 0.4s ease-in-out;
+
+  &:hover {
+    transform: translateY(-220px);
+  }
+}
+
 .slidepop-left {
   transition: all 0.4s ease-in-out;
 
