--- a/src/components/Portfolio/Project1/index.scss
+++ b/src/components/Portfolio/Project1/index.scss
@@ -3,6 +3,7 @@
   background: #21232a;
   align-items: center;
   justify-content: center;
+  padding: 0px;
 
   .text-zone {
     width: 100%;
@@ -14,13 +15,16 @@
     h2 {
       margin-bottom: 0px;
       font-weight: 100;
+      letter-spacing: 0px;
     }
 
-    h1.large-header {
-      text-align: right;
+    h2.large-header {
+      text-align: center;
+      letter-spacing: 0px;
       margin: 0;
+      color: #ffdd54;
       justify-self: center;
-      font-size: 50px;
+      font-size: 30px;
       position: relative;
     }
   }
@@ -56,12 +60,11 @@
   .overview {
     display: flex;
     flex-wrap: wrap;
-    padding: 2rem 8rem;
-    background: #c1d7df;
-    color: #141414;
+    padding: 0 1rem;
+    background: #272b3a;
+    color: #fff;
     width: 100%;
     position: relative;
-    bottom: 0px;
     z-index: 9999;
     font-size: 1.9rem;
 
