--- a/src/components/Portfolio/Project1/index.scss
+++ b/src/components/Portfolio/Project1/index.scss
@@ -1,8 +1,8 @@
 .project1-page {
-  overflow: scroll;
   background: #21232a;
   align-items: center;
   justify-content: center;
+  height: auto;
   padding: 0px;
 
   .text-zone {
@@ -34,36 +34,23 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    width: 200px;
+    width: 500px;
     height: auto;
-    top: 100px;
-
-    &:hover {
-      top: 0px;
-      transition: all 0.2s;
-    }
 
     @media screen and (max-width: 800px) {
-      
-      &:first-child {
-        display: flex;
-      }
-      &:nth-child(2) {
-        display: none;
-      }
-      &:nth-child(3) {
-        display: none;
-      }
+     width: 400px;
     }
   }
 
   .overview {
     display: flex;
     flex-wrap: wrap;
-    padding: 0 1rem;
+    flex-direction: column;
+    padding: 5px 0rem;
     background: #272b3a;
     color: #fff;
-    width: 100%;
+    width: 55%;
+    top: -50px;
     position: relative;
     z-index: 9999;
     font-size: 1.9rem;
@@ -72,6 +59,65 @@
     .goals,
     .role,
     .tools {
+      width: 95%;
+      display: flex;
+      flex-direction: column;
+    }
+
+    h3.overview-subheaders {
+      font-size: 2.1rem;
+      color: #d485ca;
+      margin-bottom: 0px;
+      font-weight: 400;
+      margin-left: 2rem;
+      text-decoration: wavy;
+    }
+
+    @media screen and (max-width: 800px) {
+      flex-direction: column;
+      z-index: 9999;
+      width: 100%;
+      padding: 2rem 3rem;
+
+      .message,
+      .goals,
+      .role,
+      .tools {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+      }
+    }
+  }
+
+  .overview-ctxt {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    padding: 5px 0rem;
+    background: #272b3a;
+    align-items: center;
+    justify-content: space-between;
+    color: #fff;
+    width: 100%;
+    position: relative;
+    z-index: 9999;
+    font-size: 1.9rem;
+
+    .subphoto {
+      width: 300px;
+      position: relative;
+
+      @media screen and (max-width: 800px) {
+        width: 100px;
+        display: flex;
+        flex-direction: row;
+        position: relative;
+      }
+    }
+
+    .message,
+    .imgcontainer {
       width: 25%;
       display: flex;
       flex-direction: column;
@@ -89,11 +135,9 @@
     @media screen and (max-width: 800px) {
       flex-direction: column;
       padding: 2rem 3rem;
-      
+
       .message,
-      .goals,
-      .role,
-      .tools {
+      .imgcontainer {
         width: 100%;
         display: flex;
         flex-direction: column;
