--- a/src/components/Portfolio/Project2/index.scss
+++ b/src/components/Portfolio/Project2/index.scss
@@ -26,6 +26,10 @@
       justify-self: center;
       font-size: 70px;
       position: relative;
+
+      @media screen and (max-width: 800px) {
+        font-size: 50px;
+      }
     }
   }
 
