--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -14,6 +14,11 @@
   display: none;
 }
 
+.highlight {
+  color: #3cefff;
+  font-weight: 500;
+}
+
 .shrink {
   transition: all 0.2s ease-in-out;
 
@@ -42,7 +47,7 @@
   transition: all 0.4s ease-in-out;
 
   &:hover {
-    transform: translateX(+100px);
+    transform: translateX(+50px);
   }
 }
 
@@ -50,7 +55,7 @@
   transition: all 0.4s ease-in-out;
 
   &:hover {
-    transform: translateX(-100px);
+    transform: translateX(-50px);
   }
 }
 
@@ -78,8 +83,6 @@
 
   .text-zone {
     position: relative;
-    text-align: right;
-    padding: 35px 10px;
     width: 90%;
     max-height: 90%;
 
@@ -173,6 +176,15 @@
       }
       &:nth-of-type(4) {
         animation-delay: 1.4s;
+      }
+      &:nth-of-type(5) {
+        animation-delay: 1.5s;
+      }
+      &:nth-of-type(6) {
+        animation-delay: 1.6s;
+      }
+      &:nth-of-type(7) {
+        animation-delay: 1.7s;
       }
     }
 
