--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -47,7 +47,7 @@
     font-weight: 100;
     font-family: sans-serif;
     letter-spacing: 3px;
-    animation: fadeIn 1s 1.8s backwards;
+    animation: fadeIn 1.4s 2s backwards;
   }
 
   .flat-button {
@@ -60,7 +60,7 @@
     padding: 10px 18px;
     border: 1px solid #fff;
     border-radius: 8px;
-    animation: fadeIn 1s 1.8s backwards;
+    animation: fadeIn 1.4s 2.2s backwards;
     white-space: nowrap;
 
     &:hover {
@@ -71,33 +71,49 @@
     }
   }
 
-  .project1 {
-    position: absolute;
-    width: 250px;
-    height: auto;
-    left: 10px;
+  .project-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
-    @media screen and (max-width: 800px) {
-      position: absolute;
-      width: 80px;
+    .project1,
+    .project2 {
+      position: relative;
+      width: 250px;
       height: auto;
-      top: 20px;
-      left: -50px;
+      z-index: 999;
     }
-  }
 
-  .project2 {
-    position: absolute;
-    width: 250px;
-    height: auto;
-    right: 10px;
+    .card {
+      background: #1b1d28;
+      color: #d485ca;
+      position: relative;
+      bottom: 60px;
+      width: 50%;
+      cursor: pointer;
+      height: auto;
+      font-size: 1.2em;
+      border-radius: 1rem;
+      padding: 0 2rem;
+      transition: all 0.2s ease-in-out;
+
+      h1 {
+        font-size: 2rem;
+      }
+    }
+
+    &:hover {
+      .card {
+        transform: translateY(60px);
+      }
+    }
 
     @media screen and (max-width: 800px) {
-      position: absolute;
-      width: 80px;
-      height: auto;
-      top: 200px;
-      left: -50px;
+      display: none;
+    }
+    @media screen and (max-width: 1200px) {
+      width: 150px;
     }
   }
 }
