--- a/src/components/Portfolio/Project2/index.scss
+++ b/src/components/Portfolio/Project2/index.scss
@@ -104,6 +104,12 @@
         width: 100%;
         display: flex;
         flex-direction: column;
+
+        .icon-list {
+          flex-direction: row;
+          flex-wrap: wrap;
+          padding: 0 2rem;
+        }
       }
     }
   }
