--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -1,9 +1,14 @@
 .home-page {
+  justify-content: space-around;
+
   .text-zone {
     position: relative;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     height: 100%;
-    width: 50%;
+    width: 20%;
 
     .myImage {
       width: 200px;
@@ -16,6 +21,10 @@
       @media screen and (max-width: 800px) {
         width: 150px;
       }
+    }
+
+    @media screen and (max-width: 800px) {
+      width: 40%;
     }
   }
 
@@ -31,7 +40,7 @@
     @media screen and (max-width: 800px) {
       color: #fff;
       cursor: pointer;
-      font-size: 28px;
+      font-size: 2.1rem;
       margin: 0;
       font-family: "Coolvetica";
       font-weight: 400;
@@ -69,6 +78,10 @@
       background-color: #3cefff;
       transition-duration: 1s;
     }
+
+    @media screen and (max-width: 800px) {
+      font-size: 1rem;
+    }
   }
 
   .project-container {
@@ -83,17 +96,26 @@
       width: 250px;
       height: auto;
       z-index: 999;
+
+      @media screen and (max-width: 800px) {
+        display: none;
+      }
+
+      @media screen and (max-width: 1200px) {
+        width: 150px;
+      }
     }
 
     .card {
       background: #1b1d28;
       color: #d485ca;
       position: relative;
-      bottom: 60px;
+      bottom: 70px;
       width: 50%;
       cursor: pointer;
       height: auto;
       font-size: 1.2em;
+      border: 1px solid #d485ca;
       border-radius: 1rem;
       padding: 0 2rem;
       transition: all 0.2s ease-in-out;
@@ -101,19 +123,23 @@
       h1 {
         font-size: 2rem;
       }
+
+      a {
+        color: #d485ca;
+        text-decoration: none;
+      }
+
+      @media screen and (max-width: 800px) {
+        bottom: 0px;
+        width: auto;
+        font-size: 0.8em;
+      }
     }
 
     &:hover {
       .card {
-        transform: translateY(60px);
+        transform: translateY(80px);
       }
-    }
-
-    @media screen and (max-width: 800px) {
-      display: none;
-    }
-    @media screen and (max-width: 1200px) {
-      width: 150px;
     }
   }
 }
