--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -15,10 +15,13 @@
     text-align: left;
 
     h1 {
-      font-size: 3rem;
       width: 100%;
       margin: 0px;
-      text-align: center;
+      text-align: left;
+
+      @media screen and (max-width: 800px) {
+        text-align: center;
+      }
     }
 
     p {
