featured and projects page update

--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -71,7 +71,8 @@
 .about-page,
 .contact-page,
 .project1-page,
-.project2-page {
+.project2-page,
+.projects-page {
   width: 100%;
   height: 100%;
   display: flex;
