--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -11,6 +11,11 @@ $color-outline: #7f7f7f80;
 
 .about-page {
   height: fit-content;
+  width: 100%;
+  opacity: 0;
+  transform-style: preserve-3d;
+  animation: fadeIn 1.5s forwards;
+  animation-delay: 1s;
 
   @media screen and (max-width: 768px) {
     flex-direction: column-reverse;
@@ -155,7 +160,6 @@ $color-outline: #7f7f7f80;
     perspective: 1000px;
     margin: auto;
     position: absolute;
-    margin: auto;
     left: 80%;
     top: 150px;
     text-align: center;
@@ -165,6 +169,8 @@ $color-outline: #7f7f7f80;
     @media screen and (max-width: 768px) {
       position: inherit;
       margin: 0px;
+      display: flex;
+      flex-direction: row;
     }
 
     .header {
@@ -185,6 +191,12 @@ $color-outline: #7f7f7f80;
 
       &.cube1 {
         animation: horizontal-spin 7s infinite linear;
+        margin: 4rem;
+      }
+      &.cube2 {
+        animation: horizontal-spin 7s infinite linear;
+        animation-direction: reverse;
+        margin: 4rem;
       }
 
       .box {
