--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -62,6 +62,8 @@
 .container {
   width: 100%;
   opacity: 0;
+  display: flex;
+  flex-direction: row;
   transform-style: preserve-3d;
   animation: fadeIn 1.5s forwards;
   animation-delay: 1s;
