--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -19,7 +19,7 @@
 
   .navbar-container {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     height: 80px;
     width: 100%;
     padding: 0 24px 0 24px;
