--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -1,21 +1,8 @@
-$width: 150px;
-$height: 150px;
-$color-inline: #00000058;
-$color-outline: #7f7f7f80;
-
-@mixin flex {
-  justify-content: center;
-  align-items: center;
-  @content;
-}
-
 .about-page {
-  height: fit-content;
-  width: 100%;
-  opacity: 0;
+  animation-delay: 1s;
+  background: #ebebeb;
   transform-style: preserve-3d;
   animation: fadeIn 1.5s forwards;
-  animation-delay: 1s;
 
   @media screen and (max-width: 768px) {
     flex-direction: column-reverse;
@@ -24,29 +11,21 @@ $color-outline: #7f7f7f80;
   }
 
   .text-zone {
-    position: relative;
-    text-align: right;
-    display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
-    padding: 0 10px;
-    width: 90%;
-    max-height: 90%;
-
-    @media screen and (max-width: 768px) {
-      padding: 35px 10px;
-      width: 90%;
-      max-height: 90%;
-      text-align: center;
-      display: block;
-    }
+    justify-content: space-around;
 
     .box {
       display: flex;
-      width: 25%;
+      width: 45%;
       left: 0;
       flex-direction: column;
       align-items: center;
       justify-content: center;
+
+      @media screen and (max-width: 800px) {
+        width: 80%;
+      }
 
       h2 {
         font-size: 2.5rem;
@@ -56,7 +35,11 @@ $color-outline: #7f7f7f80;
         width: 300px;
         margin-bottom: 24px;
         border-radius: 50%;
-        background: #3cefff;
+        border: 1px solid #000000;
+
+        @media screen and (max-width: 800px) {
+          width: 200px;
+        }
       }
 
       .goals {
@@ -77,26 +60,69 @@ $color-outline: #7f7f7f80;
         }
       }
 
-      @media screen and (max-width: 800px) {
-        .profile-img {
-          width: 200px;
-          margin-bottom: 24px;
-          border-radius: 50%;
-          background: #3cefff;
+      .education {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        padding: 2rem 0;
+        font-size: 1.9rem;
+
+        @media screen and (max-width: 800px) {
+          width: 100%;
+          font-size: 1.6rem;
+          display: flex;
+          flex-direction: column;
         }
-        width: 50%;
-        position: relative;
-        left: 25%;
+
+        h3.overview-subheaders {
+          font-size: 2.4rem;
+          color: #000;
+          text-align: left;
+          font-weight: 600;
+          margin: 0px;
+          text-decoration: wavy;
+        }
+
+        ul {
+          list-style: none;
+          text-align: left;
+          margin-bottom: 2px;
+          padding: 0px;
+
+          li {
+            p {
+              color: #000;
+              margin-bottom: 0px;
+            }
+            h4 {
+              margin: 0px;
+              color: #000;
+              text-decoration: none;
+            }
+            h5 {
+              margin: 0px;
+              color: #000;
+            }
+          }
+        }
+
+        @media screen and (max-width: 800px) {
+          flex-direction: column;
+          padding: 1rem 0;
+          position: relative;
+          width: 90%;
+          top: 0%;
+          left: 0%;
+        }
       }
     }
 
     .overview-bio {
       display: flex;
-      padding-left: 80px;
       flex-direction: column;
       justify-content: space-between;
       position: relative;
-      color: #fff;
+      color: #000;
       width: 45%;
       z-index: 9999;
       font-size: 1.9rem;
@@ -124,14 +150,14 @@ $color-outline: #7f7f7f80;
           }
           h5 {
             margin: 0px;
-            color: #fff;
+            color: #000;
           }
         }
       }
 
       h3.overview-subheaders {
         font-size: 2.4rem;
-        color: #fff;
+        color: #000;
         text-align: left;
         font-weight: 600;
         margin: 0px;
@@ -153,111 +179,6 @@ $color-outline: #7f7f7f80;
           flex-direction: column;
         }
       }
-    }
-  }
-
-  .cube-container {
-    perspective: 1000px;
-    margin: auto;
-    position: absolute;
-    left: 80%;
-    top: 150px;
-    text-align: center;
-    z-index: 99;
-    @include flex;
-
-    @media screen and (max-width: 768px) {
-      position: inherit;
-      margin: 0px;
-      display: flex;
-      flex-direction: row;
-    }
-
-    .header {
-      position: relative;
-      color: #5f4333;
-    }
-
-    .backendcube {
-      margin: 500px;
-    }
-
-    .frontendcube,
-    .backendcube {
-      transition: transform 2s ease-in;
-      transform-style: preserve-3d;
-      width: $width;
-      height: $height;
-
-      &.cube1 {
-        animation: horizontal-spin 7s infinite linear;
-        margin: 4rem;
-      }
-      &.cube2 {
-        animation: horizontal-spin 7s infinite linear;
-        animation-direction: reverse;
-        margin: 4rem;
-      }
-
-      .box {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        color: white;
-        background: $color-inline;
-        border: 1px solid $color-outline;
-        text-transform: uppercase;
-        letter-spacing: 0.08em;
-        font-family: "Roboto", sans-serif;
-        font-size: 80px;
-        font-weight: 500;
-        @include flex;
-
-        &.face1 {
-          transform: translateZ(75px);
-        }
-        &.face2 {
-          transform: translateZ(-75px) rotateY(180deg);
-        }
-        &.face3 {
-          transform: rotateX(-90deg) translateY(-75px);
-          transform-origin: top center;
-        }
-        &.face4 {
-          transform: rotateX(90deg) translateY(75px);
-          transform-origin: bottom center;
-        }
-        &.face5 {
-          transform: rotateY(270deg) translateX(-75px);
-          transform-origin: center left;
-        }
-        &.face6 {
-          transform: rotateY(-270deg) translateX(75px);
-          transform-origin: top right;
-        }
-      }
-    }
-  }
-
-  @keyframes horizontal-spin {
-    from {
-      transform: rotateY(0);
-    }
-    to {
-      transform: rotateY(360deg);
-    }
-  }
-
-  @keyframes vertical-spin {
-    from {
-      transform: rotateX(0);
-    }
-    to {
-      transform: rotateX(360deg);
     }
   }
 }
