--- a/src/components/Featured/SoundCloudUI/index.scss
+++ b/src/components/Featured/SoundCloudUI/index.scss
@@ -1,58 +1,37 @@
-.project1-page {
-  background: #21232a;
-  align-items: center;
-  justify-content: center;
+.featured {
   height: auto;
-  padding: 0px;
+  background: #f4f4f4;
+  transform-style: preserve-3d;
+  animation: fadeIn 1.5s forwards;
+  animation-delay: 1s;
 
   .text-zone {
-    width: 100%;
-    text-align: center;
-
-    h1 {
-      margin-bottom: 2px;
-    }
-    h2 {
-      margin-bottom: 0px;
-      font-weight: 100;
-      letter-spacing: 0px;
-    }
-
-    h2.large-header {
-      text-align: center;
-      letter-spacing: 0px;
-      margin: 0;
-      color: #ffdd54;
-      justify-self: center;
-      font-size: 30px;
-      position: relative;
-    }
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
   }
 
-  .project2 {
+  .project {
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
-    width: 500px;
+    width: 350px;
     height: auto;
-
-    @media screen and (max-width: 800px) {
-     width: 400px;
-    }
   }
 
   .overview {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    padding: 5px 0rem;
-    background: #272b3a;
-    color: #fff;
     width: 55%;
-    top: -50px;
+    color: #000;
+    text-align: left;
+    display: flex;
+    height: fit-content;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+    border: 1px solid #000;
     position: relative;
-    z-index: 9999;
     font-size: 1.9rem;
 
     .message,
@@ -66,9 +45,9 @@
 
     h3.overview-subheaders {
       font-size: 2.1rem;
-      color: #d485ca;
+      color: #000000;
       margin-bottom: 0px;
-      font-weight: 400;
+      font-weight: 500;
       margin-left: 2rem;
       text-decoration: wavy;
     }
@@ -76,68 +55,13 @@
     @media screen and (max-width: 800px) {
       flex-direction: column;
       z-index: 9999;
-      width: 100%;
+      width: 80%;
       padding: 2rem 3rem;
 
       .message,
       .goals,
       .role,
       .tools {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-      }
-    }
-  }
-
-  .overview-ctxt {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    padding: 5px 0rem;
-    background: #272b3a;
-    align-items: center;
-    justify-content: space-between;
-    color: #fff;
-    width: 100%;
-    position: relative;
-    z-index: 9999;
-    font-size: 1.9rem;
-
-    .subphoto {
-      width: 300px;
-      position: relative;
-
-      @media screen and (max-width: 800px) {
-        width: 100px;
-        display: flex;
-        flex-direction: row;
-        position: relative;
-      }
-    }
-
-    .message,
-    .imgcontainer {
-      width: 25%;
-      display: flex;
-      flex-direction: column;
-    }
-
-    h3.overview-subheaders {
-      font-size: 2.1rem;
-      color: #d485ca;
-      margin-bottom: 0px;
-      font-weight: 400;
-      margin-left: 2rem;
-      text-decoration: wavy;
-    }
-
-    @media screen and (max-width: 800px) {
-      flex-direction: column;
-      padding: 2rem 3rem;
-
-      .message,
-      .imgcontainer {
         width: 100%;
         display: flex;
         flex-direction: column;
