--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -1,4 +1,5 @@
 .home-page {
+  background: #c8c8c8;
   justify-content: space-around;
 
   .text-zone {
@@ -8,7 +9,7 @@
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
-    width: 20%;
+    width: auto;
 
     .myImage {
       width: 200px;
@@ -16,68 +17,33 @@
       position: relative;
       align-items: center;
       border-radius: 50%;
-      border: 2px solid #3cefff;
+      border: 2px solid #736650;
 
       @media screen and (max-width: 800px) {
         width: 150px;
       }
     }
-
-    @media screen and (max-width: 800px) {
-      width: 40%;
-    }
-  }
-
-  h1.introduction {
-    color: #fff;
-    cursor: pointer;
-    font-size: 53px;
-    margin: 0;
-    font-family: "Coolvetica";
-    font-weight: 400;
-    text-align: center;
-
-    @media screen and (max-width: 900px) {
-      color: #fff;
-      cursor: pointer;
-      font-size: 2.5rem;
-      margin: 0;
-      font-family: "Coolvetica";
-      font-weight: 400;
-      text-align: center;
-    }
-  }
-
-  h2 {
-    color: #fff;
-    cursor: pointer;
-    text-align: center;
-    margin-bottom: 20px;
-    font-weight: 100;
-    font-family: sans-serif;
-    letter-spacing: 3px;
-    animation: fadeIn 1.4s 2s backwards;
   }
 
   .projects-btn,
   .contact-btn {
-    color: #fff;
+    color: #000;
     font-size: 13px;
     font-weight: 400;
     letter-spacing: 4px;
     font-family: sans-serif;
     text-decoration: none;
     padding: 10px 18px;
-    border: 1px solid #fff;
+    border: 1px solid #000;
     border-radius: 8px;
     animation: fadeIn 2s 2.5s backwards;
     white-space: nowrap;
 
     &:hover {
-      color: #000;
-      border: 1px solid #3cefff;
-      background-color: #3cefff;
-      transition-duration: 1s;
+      color: #fff;
+      border: 1px solid #000;
+      background-color: #21232a;
+      transition-duration: 0.3s;
     }
 
     @media screen and (max-width: 800px) {
