--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -1,5 +1,5 @@
 .contact-page {
-  background: #34355a;
+  background: #c8c8c8;
   align-items: center;
   justify-content: space-around;
 
@@ -101,20 +101,25 @@
     }
 
     .flat-button {
-      background: #cbffbe;
-      font: 11px;
+      color: #000;
+      font-size: 13px;
+      font-weight: 400;
+      letter-spacing: 4px;
       width: 100%;
-      letter-spacing: 3px;
+      background: transparent;
+      font-family: sans-serif;
       text-decoration: none;
-      padding: 8px 10px;
-      border: 1px solid #cbffbe;
-      float: right;
+      padding: 10px 18px;
+      border: 1px solid #000;
       border-radius: 8px;
+      animation: fadeIn 2s 2.5s backwards;
+      white-space: nowrap;
 
       &:hover {
-        color: #000000;
-        background-color: #5aff31;
-        transition-duration: 1.1s;
+        color: #fff;
+        border: 1px solid #000;
+        background-color: #21232a;
+        transition-duration: 0.3s;
       }
     }
 
