--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -32,6 +32,7 @@
     font-weight: 400;
     letter-spacing: 4px;
     font-family: sans-serif;
+    background: transparent;
     text-decoration: none;
     padding: 10px 18px;
     border: 1px solid #000;
