--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -105,11 +105,11 @@ $color-outline: #7f7f7f80;
   }
 }
 
+
 .home-page,
 .about-page,
 .contact-page,
-.featured,
-.project2-page,
+.featured-page,
 .projects-page {
   width: 100%;
   height: 100%;
@@ -175,19 +175,6 @@ $color-outline: #7f7f7f80;
       animation: pulse 1s 1s;
       animation-fill-mode: forwards;
 
-      span.hover-link {
-        text-decoration: none;
-        font-size: 16px;
-        color: #000;
-        font-family: sans-serif;
-        font-weight: 400;
-        min-width: fit-content;
-
-        &:hover {
-          color: #000;
-        }
-      }
-
       &:nth-of-type(1) {
         animation-delay: 1.1s;
       }
@@ -208,6 +195,19 @@ $color-outline: #7f7f7f80;
       }
       &:nth-of-type(7) {
         animation-delay: 1.7s;
+      }
+    }
+
+    .hover-link {
+      text-decoration: none;
+      font-size: 1.8rem;
+      color: #000;
+      font-family: sans-serif;
+      font-weight: 400;
+      min-width: fit-content;
+
+      &:hover {
+        color: #000;
       }
     }
   }
