--- a/src/components/Projects/SoundCloudUI/index.scss
+++ b/src/components/Projects/SoundCloudUI/index.scss
@@ -1,5 +1,4 @@
-.project1-page {
-  background: #21232a;
+.projects-page {
   align-items: center;
   justify-content: center;
   height: auto;
@@ -7,33 +6,19 @@
 
   .text-zone {
     width: 100%;
+    margin: 2.5rem 0;
     text-align: center;
 
     h1 {
       margin-bottom: 2px;
     }
     h2 {
-      margin-bottom: 0px;
-      font-weight: 100;
+      font-size: 2.2rem;
       letter-spacing: 0px;
-    }
-
-    .large-header {
-      text-align: center;
-      letter-spacing: 0px;
-      margin: 0;
-      color: #ffdd54;
-      justify-self: center;
-      font-size: 70px;
-      position: relative;
-
-      @media screen and (max-width: 800px) {
-        font-size: 50px;
-      }
     }
   }
 
-  .project1 {
+  .project-img {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -47,45 +32,33 @@
   }
 
   .overview {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    padding: 5px 0rem;
-    background: #272b3a;
-    color: #fff;
     width: 55%;
-    justify-content: center;
+    color: #000;
+    text-align: left;
+    display: flex;
+    height: fit-content;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+    border: 1px solid #000;
     position: relative;
-    z-index: 9999;
     font-size: 1.9rem;
-
-    .icon-list {
-      list-style: none;
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      padding: 0px;
-
-      @media screen and (max-width: 800px) {
-        flex-direction: column;
-      }
-    }
 
     .message,
     .goals,
     .role,
     .tools {
-      width: 90%;
+      width: 95%;
       display: flex;
       flex-direction: column;
     }
 
     h3.overview-subheaders {
       font-size: 2.1rem;
-      color: #d485ca;
+      color: #000000;
       margin-bottom: 0px;
-      font-weight: 400;
+      font-weight: 500;
       margin-left: 2rem;
       text-decoration: wavy;
     }
@@ -93,7 +66,7 @@
     @media screen and (max-width: 800px) {
       flex-direction: column;
       z-index: 9999;
-      width: 100%;
+      width: 80%;
       padding: 2rem 3rem;
 
       .message,
@@ -103,26 +76,20 @@
         width: 100%;
         display: flex;
         flex-direction: column;
-
-        .icon-list {
-          flex-direction: row;
-          flex-wrap: wrap;
-          padding: 0 2rem;
-        }
       }
     }
   }
 
-  .overview-ctxt {
+  .overview-col {
+    width: 95%;
+    color: #000;
+    text-align: left;
     display: flex;
-    flex-wrap: wrap;
+    height: fit-content;
     flex-direction: row;
-    padding: 5px 0rem;
-    background: #272b3a;
     align-items: center;
-    justify-content: space-between;
-    color: #fff;
-    width: 100%;
+    justify-content: space-evenly;
+    border-radius: 8px;
     position: relative;
     font-size: 1.9rem;
 
@@ -140,30 +107,34 @@
 
     .message,
     .imgcontainer {
-      width: 25%;
+      width: 50%;
+      margin: 0 4rem;
       display: flex;
       flex-direction: column;
+
+      @media screen and (max-width: 800px) {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+      }
     }
 
     h3.overview-subheaders {
       font-size: 2.1rem;
-      color: #d485ca;
+      color: #000;
       margin-bottom: 0px;
-      font-weight: 400;
+      font-weight: 600;
       margin-left: 2rem;
       text-decoration: wavy;
+
+      @media screen and (max-width: 800px) {
+        text-align: center;
+      }
     }
 
     @media screen and (max-width: 800px) {
       flex-direction: column;
       padding: 2rem 3rem;
-
-      .message,
-      .imgcontainer {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-      }
     }
   }
 }
