--- a/src/components/Featured/index.scss
+++ b/src/components/Featured/index.scss
@@ -53,6 +53,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
+    animation-delay: 1.6s;
 
     .project {
       display: flex;
