new years updates

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -1,3 +1,16 @@
+$width: 150px;
+$height: 150px;
+$color-inline: #00000092;
+$color-outline: #7f7f7f80;
+
+@mixin flex {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  @content;
+}
+
 .home-page {
   background: #c8c8c8;
   justify-content: space-around;
@@ -6,6 +19,7 @@
     position: relative;
     text-align: center;
     display: flex;
+    align-items: center;
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
@@ -15,9 +29,8 @@
       width: 200px;
       height: auto;
       position: relative;
-      align-items: center;
       border-radius: 50%;
-      border: 2px solid #736650;
+      border: 1px solid #000;
 
       @media screen and (max-width: 800px) {
         width: 150px;
@@ -106,6 +119,108 @@
       .card {
         transform: translateY(80px);
       }
+    }
+  }
+
+  .cube-container {
+    perspective: 1000px;
+    position: relative;
+    text-align: center;
+    z-index: 99;
+    @include flex;
+
+    @media screen and (max-width: 768px) {
+      position: inherit;
+      margin: 0px;
+      display: flex;
+      flex-direction: row;
+    }
+
+    .header {
+      position: relative;
+      color: #5f4333;
+    }
+
+    .backendcube {
+      margin: 500px;
+    }
+
+    .frontendcube,
+    .backendcube {
+      transition: transform 2s ease-in;
+      transform-style: preserve-3d;
+      width: $width;
+      height: $height;
+
+      &.cube1 {
+        animation: horizontal-spin 7s infinite linear;
+        margin: 4rem;
+      }
+      &.cube2 {
+        animation: horizontal-spin 7s infinite linear;
+        animation-direction: reverse;
+        margin: 4rem;
+      }
+
+      .box {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        color: white;
+        background: $color-inline;
+        border: 1px solid $color-outline;
+        text-transform: uppercase;
+        letter-spacing: 0.08em;
+        font-family: "Roboto", sans-serif;
+        font-size: 80px;
+        font-weight: 500;
+        @include flex;
+
+        &.face1 {
+          transform: translateZ(75px);
+        }
+        &.face2 {
+          transform: translateZ(-75px) rotateY(180deg);
+        }
+        &.face3 {
+          transform: rotateX(-90deg) translateY(-75px);
+          transform-origin: top center;
+        }
+        &.face4 {
+          transform: rotateX(90deg) translateY(75px);
+          transform-origin: bottom center;
+        }
+        &.face5 {
+          transform: rotateY(270deg) translateX(-75px);
+          transform-origin: center left;
+        }
+        &.face6 {
+          transform: rotateY(-270deg) translateX(75px);
+          transform-origin: top right;
+        }
+      }
+    }
+  }
+
+  @keyframes horizontal-spin {
+    from {
+      transform: rotateY(0);
+    }
+    to {
+      transform: rotateY(360deg);
+    }
+  }
+
+  @keyframes vertical-spin {
+    from {
+      transform: rotateX(0);
+    }
+    to {
+      transform: rotateX(360deg);
     }
   }
 }
