--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -39,7 +39,7 @@
 
   .navbar-container {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-end;
     height: 80px;
     width: 100%;
     padding: 0 24px 0 24px;
@@ -53,6 +53,7 @@
       cursor: pointer;
       font-size: 1.5rem;
       position: relative;
+      margin: 0 3rem;
       display: flex;
       align-items: center;
       font-family: "Coolvetica";
@@ -60,7 +61,6 @@
       text-decoration: none;
       text-transform: uppercase;
 
-      &.active,
       &:hover {
         border-bottom: 3px solid #3cefff;
       }
