--- a/src/components/Projects/SoundCloudUI/index.scss
+++ b/src/components/Projects/SoundCloudUI/index.scss
@@ -1,7 +1,4 @@
 .projects-page {
-  height: auto;
-  padding: 0px;
-
   .text-zone {
     width: 100%;
     margin: 2.5rem 0;
@@ -43,6 +40,10 @@
     position: relative;
     font-size: 1.9rem;
 
+    @media screen and (max-width: 800px) {
+      width: 100%;
+    }
+
     .message,
     .goals,
     .role,
@@ -79,10 +80,11 @@
   }
 
   .overview-col {
-    width: 95%;
+    width: 55%;
     color: #000;
     text-align: left;
     display: flex;
+    margin: 3rem 0;
     height: fit-content;
     flex-direction: row;
     align-items: center;
@@ -95,7 +97,7 @@
       width: 300px;
       position: relative;
 
-      @media screen and (max-width: 800px) {
+      @media screen and (max-width: 1200px) {
         width: 100px;
         display: flex;
         flex-direction: row;
@@ -128,11 +130,6 @@
       @media screen and (max-width: 800px) {
         text-align: center;
       }
-    }
-
-    @media screen and (max-width: 800px) {
-      flex-direction: column;
-      padding: 2rem 3rem;
     }
   }
 }
