--- a/src/components/Featured/index.scss
+++ b/src/components/Featured/index.scss
@@ -34,7 +34,7 @@
     top: 0;
     height: 100%;
     width: 100%;
-    background: #41c9ff;
+    background: #1b1c1e;
     z-index: -1;
     border-radius: 10rem;
     transition: 0.45 ease all;
