--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -25,12 +25,6 @@
     font-family: "Coolvetica";
     letter-spacing: 3px;
     text-decoration: none;
-    text-transform: uppercase;
-
-    &:hover {
-      font-size: 3rem;
-      transition: all 0.2s;
-    }
 
     @media screen and (max-width: 768px) {
       font-size: 2.5rem;
@@ -46,6 +40,10 @@
     max-width: 1200px;
     position: relative;
     z-index: 99999;
+
+    @media screen and (max-width: 768px) {
+      padding: 0;
+    }
 
     .to-section {
       color: #fff;
@@ -66,7 +64,7 @@
       }
 
       @media screen and (max-width: 768px) {
-        font-size: 1.3rem;
+        display: none;
       }
     }
   }
