--- a/src/components/Projects/index.scss
+++ b/src/components/Projects/index.scss
@@ -30,10 +30,14 @@
       align-items: center;
       padding: 3rem 0;
       color: #fff;
-      width: 100%;
+      width: 45%;
       position: relative;
       z-index: 9999;
       font-size: 1.9rem;
+
+      @media screen and (max-width: 768px) {
+        width: 100%;
+      }
 
       h1 {
         font-size: 3rem;
