--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -5,7 +5,7 @@
   animation: fadeIn 1.5s forwards;
 
   @media screen and (max-width: 768px) {
-    flex-direction: column-reverse;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
   }
