--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -10,6 +10,19 @@
   position: relative;
 }
 
+.previous-link {
+  position: relative;
+  right: 40%;
+  margin: 2rem 0;
+  font-weight: 400;
+  font-size: 2rem;
+
+  .text {
+    color: #000;
+    text-decoration: none;
+  }
+}
+
 .hide {
   display: none;
 }
