--- a/src/components/Navbar/MobileMenu/index.scss
+++ b/src/components/Navbar/MobileMenu/index.scss
@@ -12,24 +12,23 @@
   }
 }
 
-.toggle {
-    display: none;
-    transition: all .5s linear;
-
-    li {
-        margin: 1rem 0;
-    }
-}
-
-.toggle.active {
+.link-container {
+  .nav-links {
     display: flex;
     position: absolute;
     width: 100%;
-    top: 100%;
+    top: 85%;
     left: 0;
-    margin-top: 1rem;
     background-color: #000000c5;
     flex-direction: column;
     align-items: flex-start;
-    transition: all .5s linear;
+    transition: all 0.8s linear;
+
+    a {
+      color: #FFFFFF;
+      text-decoration: none;
+      font-size: 2.8rem;
+      margin: 2rem 0;
+    }
+  }
 }
