--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -27,7 +27,7 @@
     text-decoration: none;
 
     @media screen and (max-width: 768px) {
-      font-size: 2.5rem;
+      display: none;
     }
   }
 
